src/compiler/parser.ts
/* Do not edit this file directly. It is automatically generated. Please edit smallbasic.pegjs */
export default (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(b) { return b; },
        peg$c1 = { type: "other", description: "end of line" },
        peg$c2 = "\n",
        peg$c3 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c4 = "\r\n",
        peg$c5 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c6 = "\r",
        peg$c7 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c8 = "\u2028",
        peg$c9 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c10 = "\u2029",
        peg$c11 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c12 = { type: "other", description: "whitespace" },
        peg$c13 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c14 = { type: "class", value: "[\\t\\v\\f \\u00A0\\uFEFF]", description: "[\\t\\v\\f \\u00A0\\uFEFF]" },
        peg$c15 = { type: "other", description: "comment" },
        peg$c16 = "'",
        peg$c17 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c18 = { type: "any", description: "any character" },
        peg$c19 = function(c) { return c; },
        peg$c20 = function(c) { return ['comment', [c.join('')]]; },
        peg$c21 = { type: "other", description: "string literal" },
        peg$c22 = "\"\"",
        peg$c23 = { type: "literal", value: "\"\"", description: "\"\\\"\\\"\"" },
        peg$c24 = "\"",
        peg$c25 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c26 = function(s, last) { return text(); },
        peg$c27 = /^[^\\]/,
        peg$c28 = { type: "class", value: "[^\\\\]", description: "[^\\\\]" },
        peg$c29 = function(last) {return last;},
        peg$c30 = { type: "other", description: "number" },
        peg$c31 = function(n) { return n; },
        peg$c32 = ".",
        peg$c33 = { type: "literal", value: ".", description: "\".\"" },
        peg$c34 = function(l, r) { return parseFloat(l + "." + r); },
        peg$c35 = /^[0-9]/,
        peg$c36 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c37 = function(digits) { return parseInt(text(), 10); },
        peg$c38 = "-",
        peg$c39 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c40 = function(n) { return n * -1; },
        peg$c41 = function(l) { return ['literal', [l]]; },
        peg$c42 = { type: "other", description: "identifier" },
        peg$c43 = /^[a-zA-Z]/,
        peg$c44 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c45 = /^[a-zA-Z0-9_]/,
        peg$c46 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c47 = function(start, rest) { return langKeywords.indexOf(text()) === -1; },
        peg$c48 = function(start, rest) { return text().toLowerCase(); },
        peg$c49 = { type: "other", description: "variable" },
        peg$c50 = function(i) { return ['variable', [i]]; },
        peg$c51 = { type: "other", description: "property" },
        peg$c52 = function(i, p) { return ['property', [i, p]]; },
        peg$c53 = { type: "other", description: "array" },
        peg$c54 = "[",
        peg$c55 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c56 = "]",
        peg$c57 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c58 = function(e, i) { return i; },
        peg$c59 = function(e, indecies) {
            //return ['array', [e, indecies]];
            return indecies.reduce(function(lhs, rhs) {
              return ['binop', ['index', lhs, rhs]];
            }, e);
          },
        peg$c60 = { type: "other", description: "left hand side" },
        peg$c61 = "+",
        peg$c62 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c63 = function(l, tail) {
            if (!tail || !tail.length) {
              return l;
            }

            return tail.reduce(function(previous, t) {
              return ['binop', [t[1], previous, t[3]]];
            }, l);
          },
        peg$c64 = "*",
        peg$c65 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c66 = "/",
        peg$c67 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c68 = function(u, e) {
            if (!u) {
              return e;
            }

            if (u === '+') {
              return e; // this is a no-op
            }

            return ['unop', [u, e]];
          },
        peg$c69 = "(",
        peg$c70 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c71 = ")",
        peg$c72 = { type: "literal", value: ")", description: "\")\"" },
        peg$c73 = function(e) { return e; },
        peg$c74 = { type: "other", description: "expression" },
        peg$c75 = { type: "other", description: "function call" },
        peg$c76 = ",",
        peg$c77 = { type: "literal", value: ",", description: "\",\"" },
        peg$c78 = function(e, p1, p) { return p; },
        peg$c79 = function(e, p1, prest) { return [p1].concat(prest || []); },
        peg$c80 = function(e, params) { return ['call', [e, params]]; },
        peg$c81 = "<>",
        peg$c82 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c83 = ">=",
        peg$c84 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c85 = "<=",
        peg$c86 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c87 = ">",
        peg$c88 = { type: "literal", value: ">", description: "\">\"" },
        peg$c89 = "<",
        peg$c90 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c91 = "=",
        peg$c92 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c93 = "and",
        peg$c94 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c95 = "or",
        peg$c96 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c97 = function(l, tail) {
            if (!tail || !tail.length) {
              return l;
            }

            return tail.reduce(function(previous, t) {
              var op = t[1].toLowerCase() === 'and' ? '&&' : '||';
              return ['binop', [op, previous, t[3]]];
            }, l);
          },
        peg$c98 = { type: "other", description: "Assignment" },
        peg$c99 = function(l, e) {
            //return ['assign', [l, e]];
            return ['assign', [['binop', ['assign', l, e]]]];
          },
        peg$c100 = { type: "other", description: "Function call" },
        peg$c101 = function(c) { return ['callstatement', [c]]; },
        peg$c102 = { type: "other", description: "If statement" },
        peg$c103 = "if",
        peg$c104 = { type: "literal", value: "If", description: "\"If\"" },
        peg$c105 = "then",
        peg$c106 = { type: "literal", value: "Then", description: "\"Then\"" },
        peg$c107 = "elseif",
        peg$c108 = { type: "literal", value: "ElseIf", description: "\"ElseIf\"" },
        peg$c109 = function(c, b) { return [c, b]; },
        peg$c110 = "else",
        peg$c111 = { type: "literal", value: "Else", description: "\"Else\"" },
        peg$c112 = function(c, b, elif) { return [null, b]; },
        peg$c113 = "endif",
        peg$c114 = { type: "literal", value: "EndIf", description: "\"EndIf\"" },
        peg$c115 = function(c, b, elif, els) {
            var conds = [ [c,b] ];

            if (elif && elif.length) {
              conds = conds.concat(elif);
            }
            if (els) {
              conds.push(els);
            }

            return ['cond', conds];
          },
        peg$c116 = { type: "other", description: "Label statement" },
        peg$c117 = ":",
        peg$c118 = { type: "literal", value: ":", description: "\":\"" },
        peg$c119 = function(l) { return ['label', [l]]; },
        peg$c120 = { type: "other", description: "Goto statement" },
        peg$c121 = "goto",
        peg$c122 = { type: "literal", value: "Goto", description: "\"Goto\"" },
        peg$c123 = function(l) { return ['goto', [l]]; },
        peg$c124 = { type: "other", description: "Sub statement" },
        peg$c125 = "sub",
        peg$c126 = { type: "literal", value: "Sub", description: "\"Sub\"" },
        peg$c127 = "endsub",
        peg$c128 = { type: "literal", value: "EndSub", description: "\"EndSub\"" },
        peg$c129 = function(n, b) { return ['fn', [n, [], b]]; },
        peg$c130 = { type: "other", description: "For loop" },
        peg$c131 = "for",
        peg$c132 = { type: "literal", value: "For", description: "\"For\"" },
        peg$c133 = "to",
        peg$c134 = { type: "literal", value: "To", description: "\"To\"" },
        peg$c135 = "step",
        peg$c136 = { type: "literal", value: "Step", description: "\"Step\"" },
        peg$c137 = function(l, from, to, e) { return e; },
        peg$c138 = "endfor",
        peg$c139 = { type: "literal", value: "EndFor", description: "\"EndFor\"" },
        peg$c140 = function(l, from, to, step, b) {
            return ['for', [
              l,
              [from, to, step ? step : ['literal', [1]]],
              b
            ]];
          },
        peg$c141 = { type: "other", description: "While loop" },
        peg$c142 = "while",
        peg$c143 = { type: "literal", value: "While", description: "\"While\"" },
        peg$c144 = "endwhile",
        peg$c145 = { type: "literal", value: "EndWhile", description: "\"EndWhile\"" },
        peg$c146 = function(c, b) {
            return ['while', [c, b]];
          },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseendline_comment();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseendline_comment();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseblock();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseeol() {
      var s0, s1;

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 10) {
        s0 = peg$c2;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c4) {
          s0 = peg$c4;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 13) {
            s0 = peg$c6;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 8232) {
              s0 = peg$c8;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 8233) {
                s0 = peg$c10;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
            }
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parse_() {
      var s0, s1;

      peg$silentFails++;
      s0 = [];
      if (peg$c13.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (peg$c13.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }

      return s0;
    }

    function peg$parsecomment() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 39) {
          s2 = peg$c16;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c17); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            s6 = peg$currPos;
            peg$silentFails++;
            s7 = peg$parseeol();
            peg$silentFails--;
            if (s7 === peg$FAILED) {
              s6 = void 0;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            if (s6 !== peg$FAILED) {
              if (input.length > peg$currPos) {
                s7 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c18); }
              }
              if (s7 !== peg$FAILED) {
                peg$savedPos = s5;
                s6 = peg$c19(s7);
                s5 = s6;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$currPos;
              s6 = peg$currPos;
              peg$silentFails++;
              s7 = peg$parseeol();
              peg$silentFails--;
              if (s7 === peg$FAILED) {
                s6 = void 0;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              if (s6 !== peg$FAILED) {
                if (input.length > peg$currPos) {
                  s7 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s6 = peg$c19(s7);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c20(s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }

      return s0;
    }

    function peg$parseendline_comment() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsecomment();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseeol();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestring() {
      var s0, s1, s2, s3, s4, s5, s6;

      peg$silentFails++;
      if (input.substr(peg$currPos, 2) === peg$c22) {
        s0 = peg$c22;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c23); }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 34) {
          s1 = peg$c24;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c25); }
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$currPos;
          s4 = peg$currPos;
          peg$silentFails++;
          s5 = peg$parseunscapedquote();
          peg$silentFails--;
          if (s5 === peg$FAILED) {
            s4 = void 0;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            peg$silentFails++;
            s6 = peg$parseeol();
            peg$silentFails--;
            if (s6 === peg$FAILED) {
              s5 = void 0;
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              if (input.length > peg$currPos) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c18); }
              }
              if (s6 !== peg$FAILED) {
                peg$savedPos = s3;
                s4 = peg$c19(s6);
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$currPos;
            peg$silentFails++;
            s5 = peg$parseunscapedquote();
            peg$silentFails--;
            if (s5 === peg$FAILED) {
              s4 = void 0;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$currPos;
              peg$silentFails++;
              s6 = peg$parseeol();
              peg$silentFails--;
              if (s6 === peg$FAILED) {
                s5 = void 0;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                if (input.length > peg$currPos) {
                  s6 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s3;
                  s4 = peg$c19(s6);
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseunscapedquote();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c26(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }

      return s0;
    }

    function peg$parseunscapedquote() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (peg$c27.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 34) {
          s2 = peg$c24;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c25); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c29(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsenumber() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsefloat();
      if (s1 === peg$FAILED) {
        s1 = peg$parseinteger();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c31(s1);
      }
      s0 = s1;
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c30); }
      }

      return s0;
    }

    function peg$parsefloat() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseinteger();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s2 = peg$c32;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c33); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseunsigned_integer();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c34(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseunsigned_integer() {
      var s0, s1, s2;
